cap nhat dashboard lan cuoi